# lancelot

./: .env  .gitignore  Cargo.toml  README.md  req.hurl
src/: fl.html  main.rs  traits.rs  utils.rs
src/application/: mod.rs
src/application/controller/: mod.rs  router.rs
src/application/controller/logging/: mod.rs
src/application/entity/: task.rs  task.rs.old
src/application/service/: mod.rs  parse.rs  serialize.rs  utils.rs
src/application/service/html/: mod.rs
src/application/service/http/: mod.rs  utils.rs
src/application/service/json/: filter.rs  filter.rs.old  mod.rs  parse.rs  serialize.rs
src/assets/css/: main.css
src/assets/html/: info.html  not_found.html
