[package]
name = "lancelot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.5"
scraper = "0.20.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
colored = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
